Update .gitignore to remove duplicate entries and add additional paths; delete unused PDF, Jupyter notebook, and CSV files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
 .DS_Store
-.DS_Store
-.DS_Store
 docs/test-data-sets/trimmed/amazon_products.csv
 .gitignore
 docs/test-data-sets/unedited/amazon_products copy.csv
-.DS_Store
 main.py
 wsgi-file.ini
+docs/test-data-sets
+client-contracts
+dev/models/Templates/electronics-computer-vision
+Downloads.code-workspace
+dev/dataset/other examples (unused)
+dev/dataset/want-to-incorporate(todo)
+dev/webapps(with coding files)/sql_example/Untitled.sql
+.gitignore
+.gitignore
+dev/webapps(with coding files)/webservice-application(wordpress.robjects.me)/sql/adapters/adapters.sqlproj
+dev/webapps(with coding files)/webservice-application(wordpress.robjects.me)/sql/adapters/type_c_cords_&_adapters.sql
+dev/webapps(with coding files)/sql_example/Sakila.sqlite3
 .DS_Store
+client-docs
+dev/models
