Update .gitignore to remove duplicate .DS_Store entries and add schema file; add new architecture images

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ dev/webapps(with coding files)/sql_example/Sakila.sqlite3
 client-docs
 dev/models
 .DS_Store
+.DS_Store
+dev/dataset/main-dataset/schema/~$type-c-Adapters_full-schema-with-color-coded-options.xlsx
